+applied: fix to scale images --> make width the full width, and then match height with width --> do this for imageTextDisplay, textImageDisplay, and cover screen (center image here)

--- a/res/layout/image_text_display_screen.xml
+++ b/res/layout/image_text_display_screen.xml
@@ -6,8 +6,11 @@
 	<ScrollView style="@style/UsbongDefaultScrollView"
 	>		 	
 	<LinearLayout style="@style/UsbongTextImageMainLayout">	    
-	    <ImageView android:id="@+id/image_display_imageview"
-		    style="@style/UsbongTextImageDisplayImageView"	    	
+	    <ImageView android:id="@+id/image_display_imageview"	        
+		    style="@style/UsbongTextImageDisplayImageView"	
+		    android:layout_width="fill_parent"
+	  	    android:layout_height="wrap_content"
+	  	    android:adjustViewBounds="true"    	
 		/>
 	    <TextView android:id="@+id/image_text_display_textview"
 		    style="@style/UsbongDefaultTextView"	    	
