--- a/res/layout/date_screen.xml
+++ b/res/layout/date_screen.xml
@@ -6,34 +6,20 @@
 	<ScrollView style="@style/UsbongDefaultScrollView"
 	>		 	
 	<LinearLayout style="@style/UsbongDefaultMainLayout">
-		<TextView android:id="@+id/date_textview"
+	   	<TextView android:id="@+id/date_textview"
 		    style="@style/UsbongDefaultTextView"	    	
 		    android:text="@string/default_textview" 
-		    android:layout_alignParentBottom="true"	    			
-		/>
-		<LinearLayout style="@style/UsbongDateMainLayout">
-			<Spinner 
-		        android:id="@+id/date_month_spinner"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:prompt="@string/date_month"
-		        android:textSize="24dp"
-	    	/>
-			<Spinner 
-		        android:id="@+id/date_day_spinner"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:prompt="@string/date_day"
-		        android:textSize="24dp"
-	    	/>
-			<EditText android:id="@+id/date_edittext"
-			    style="@style/UsbongDefaultTextView"	    	
-			    android:layout_alignParentBottom="true"
-			    android:text="2012" 
-			    android:textColor="#000000"		
-			    android:inputType="number"
-			/>
-		</LinearLayout>
+		    android:layout_alignParentBottom="true"
+		    />
+		      		
+	    <DatePicker
+         android:id="@+id/date_picker"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content" 
+         android:calendarViewShown="false"
+         style="@style/DatePickerTheme"
+         >
+    	</DatePicker>
 	</LinearLayout>
 	</ScrollView>	    	    
 	<LinearLayout
